<resources>
    <string name="app_name">Leccionario</string>
    <string name="base_url">http://192.168.0.2:8080/LeccionarioV3/webresources/entities.</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Autenticar</string>
    <string name="action_sign_in_short">Pass_Entar</string>
    <string name="action_sign_in_short_user">User_Entrar</string>
    <!-- <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>-->
    <string name="error_incorrect_password">Usuario o clave incorrecta</string>
    <string name="error_field_required">Campo requirido</string>
    <string name="error_mismatch_password">Las claves no coinciden</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_inspector">InspectorActivity</string>
    <string name="title_activity_instructor">InstructorActivity</string>
    <string name="title_activity_profesor">ProfesorActivity</string>


    <!-- Strings related to Instructor -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_crear_usuario">CrearUsuarioActivity</string>
    <string name="action_create_user"> Crear Usuario</string>
    <string name="action_update_user"> Actualizar Usuario</string>
    <string name="prompt_cedula">Cédula</string>
    <string name="prompt_primerNombre">Primer Nombre</string>
    <string name="prompt_segundoNombre">Segundo Nombre</string>
    <string name="prompt_primerApellido">Primer Apellido</string>
    <string name="prompt_segundoApellido">Segundo Apellido</string>
    <string name="prompt_nuevoUsuario">Nuevo Usuario</string>
    <string name="prompt_clave">Clave</string>
    <string name="prompt_confirmarClave">Confirmar Clave</string>
    <string name="action_create_topic">Crear Tema</string>
    <string name="action_update_topic">Actualizar Tema</string>
    <string name="action_update_asignatura"> Actualizar Materia</string>
    <string name="action_create_asignatura"> Crear Materia</string>
    <string name="action_create_grupo"> Crear Grupo</string>
    <string name="action_update_grupo"> Actualizar Grupo</string>
    <string name="action_crear_leccionario"> Crear Leccionario</string>
    <string name="action_update_lecc">Actualizar Leccionario</string>


    <!-- Strings related to Materia -->
    <string name="title_activity_crear_asignatura">CrearAsignaturaActivity</string>
    <string name="prompt_materia">Nombre Materia</string>


    <!-- Strings related to Grupo -->
    <string name="title_crear_grupo">CrearGrupoActivity</string>
    <string name="prompt_nombreGrupo">Nombre Grupo</string>
    <string name="prompt_semestre">Semestre</string>

    <!-- Strings related to Leccionario -->

    <string name="title_activity_crear_leccionario">CrearLeccionarioActivity</string>
    <string name="prompt_nombreInspector">Nombre Inspector</string>
    <string name="prompt_nombreCurso">Nombre Curso</string>
    <string name="prompt_fecha">Fecha</string>
    <string name="prompt_hora">Hora</string>
    <string name="prompt_nombreProfesor">Nombre del Profesor</string>
    <string name="prompt_anoLectivoInicio">Año Lectivo Inicio</string>
    <string name="prompt_anoLectivoFin">Año Lectivo Fin</string>s
    <string name="prompt_tema">Tema</string>
    <string name="prompt_fechaLeccionario"> Fecha leccionrio</string>
    <string name="prompt_control">Control del Leccionario</string>
    <string name="prompt_idInstructor">Id instructor</string>

    <!-- Strings related to turno del profesor-->
    <string name="title_activity_act_profesor">ActProfesorActivity</string>
    <string name="action_asistencia">Asistencia</string>
    <string name="title_activity_registrar_observacion">RegistrarObservacionActivity</string>
    <string name="action_register_extra_info"> Info Estudiante</string>
    <string name="action_change_pass"> Cambiar Clave</string>
    <string name="title_activity_actualiazar_usuario">ActualiazarUsuarioActivity</string>
    <string name="title_activity_actualizar_asignatura">ActualizarAsignaturaActivity</string>
    <string name="title_activity_actualizar_grupo">ActualizarGrupoActivity</string>
    <string name="title_activity_actualizar_leccionario">ActualizarLeccionarioActivity</string>

    <!--Menu Items-->
    <string name="item_create_profesor">Crear Profesor</string>
    <string name="item_create_instructor">Crear Instructor</string>
    <string name="item_create_student">Crear Estudiante</string>
    <string name="item_update_profesor">Actualizar Profesor</string>
    <string name="item_update_instuctor">Actualizar Instructor</string>
    <string name="item_update_student">Actualizar Estudiante</string>


    <!-- Strings related to turno del tema-->

    <string name="title_activity_crear_tema">CrearTemaActivity</string>
    <string name="title_activity_actualizar_tema">ActualizarTemaActivity</string>
    <string name="prompt_topic">Nombre del tema</string>
    <string name="title_activity_change_pass">ChangePassActivity</string>

    <!-- Strings related to IngresarTurnoActivity-->
    <string name="title_activity_ingresar_turno">Actividad Ingresar Turno</string>

    <!-- Strings related to crear incidencia-->
    <string name="prompt_nombreIncidencia">Descripción</string>
    <string name="action_crear_incidencia">Crear Incidencia </string>
    <string name="action_update_incidencia">Actualizar Incidencia </string>


    <!-- Strings related to crear horaa-->
    <string name="prompt_idHora">ID Hora</string>
    <string name="prompt_horaInicio">Hora Inicio HH:MM</string>
    <string name="prompt_horaFin">Hora Fin HH:MM</string>
    <string name="action_crear_hora">Crear Hora</string>
    <string name="action_update_hora">Actualizar Hora</string>


    <!-- Strings related to cambiar clave-->
    <string name="prompt_clave_actual">CLave Actual</string>
    <string name="prompt_clave_nueva">Clave Nueva</string>

    <!-- Erores-->
    <string name="error_unable_set_connection">No se pudo crear la petición</string>
    <string name="error_unable_make_connection">Error hacinedo la conexión</string>
    <string name="error_unable_read_response">Error procesando la respuesta</string>
    <string name="error_protocol_connection">Error utilizando el protocolo HTTP</string>
    <string name="error_waiting_response">Error esperando la respuesta</string>
    <string name="error_http_response">Error HTTP</string>
    <string name="error_json">Error en el manejo de datos</string>
    <string name="error_SQL">Error realizando la consulta a la Base de Datos</string>


    <string name="success_msg">Operación exitosa</string>
    <string name="title_activity_crear_hora">crearHoraActivity</string>
    <string name="title_activity_crear_incidencia">crearIncidenciaActivity</string>
    <string name="title_activity_actualizar_hora">ActualizarHoraActivity</string>
    <string name="title_activity_actualizar_incidencia">ActualizarIncidenciaActivity</string>
    <string name="title_activity_persona">PersonaActivity</string>


    <string-array name="personaType">
        <item>Seleccione</item>
        <item>Instructor</item>
        <item>Profesor</item>
    </string-array>
    <string name="title_activity_actualizar_persona">ActualizarPersonaActivity</string>

</resources>

